# LinX

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  COMMERCIAL-REQUEST-TEMPLATE.md  COMMERCIAL-USE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PROJECT_STRUCTURE.md  README.md  README_EN.md  SECURITY.md  coverage.xml  docker-compose.yml  test_skills_flow.py
backend/: .env.example  .gitignore  .gitkeep  .pre-commit-config.yaml  CONFIG.md  Dockerfile.optimized  MANIFEST.in  Makefile  README.md  __init__.py  alembic.ini  config.yaml  config.yaml.example  mypy.ini  pyproject.toml  pytest.ini  query_agent.py  query_provider.py  requirements-dev.txt  requirements.txt  restart_backend.sh  run_tests.sh  setup.py  test_config_validation.py  test_error_recovery_basic.py  test_error_recovery_standalone.py  test_llm_tokens.py  test_llmpool_stream.py  test_llmpool_tokens.py  test_ollama_stream.py  test_policy_loader_integration.py  test_real_execution.py
backend/access_control/: .gitkeep  ABAC_IMPLEMENTATION_SUMMARY.md  KNOWLEDGE_FILTER_IMPLEMENTATION_SUMMARY.md  PERMISSIONS_IMPLEMENTATION_SUMMARY.md  POLICY_LOADER_IMPLEMENTATION_SUMMARY.md  RBAC_IMPLEMENTATION_SUMMARY.md  README.md  REGISTRATION_IMPLEMENTATION_SUMMARY.md  __init__.py  abac.py  agent_access.py  agent_ownership.py  audit_logger.py  jwt_auth.py  knowledge_filter.py  memory_filter.py  models.py  permissions.py  policy_loader.py  rbac.py  registration.py  skill_access.py  test_abac.py  test_agent_ownership.py  test_audit_logger.py  test_jwt_auth.py  test_knowledge_filter.py  test_memory_filter.py  test_models.py  test_permissions.py  test_policy_loader.py  test_rbac.py  test_registration.py
backend/agent_framework/: .gitkeep  __init__.py  access_policy.py  agent_conversation_runner.py  agent_executor.py  agent_lifecycle.py  agent_memory_interface.py  agent_registry.py  agent_status.py  agent_template.py  agent_tools.py  base_agent.py  capability_matcher.py  code_block_executor.py  conversation_execution.py  conversation_history_compaction.py  conversation_lifecycle_manager.py  conversation_storage_cleanup.py  conversation_workspace_decay.py  default_templates.py  inter_agent_communication.py  persistent_conversations.py  runtime_capabilities.py  runtime_context_service.py  runtime_policy.py  runtime_service.py  sandbox_policy.py  session_manager.py  skill_manager.py  test_agent_framework.py  test_agent_template.py  test_inter_agent_communication.py
backend/agent_scheduling/: __init__.py  cron_utils.py  manager.py  service.py
backend/alembic/: env.py
backend/analytics/: __init__.py  agent_performance.py  anomaly_detection.py  cost_tracking.py  resource_forecasting.py  task_trends.py  test_analytics.py  user_satisfaction.py
backend/api_gateway/: .gitkeep  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  errors.py  feishu_long_connection.py  feishu_publication_helpers.py  main.py  test_api_gateway.py  ui_experience.py  websocket.py
backend/compliance/: __init__.py  anonymization.py  audit_reports.py  consent.py  data_retention.py  gdpr.py  policies.py  test_compliance.py
backend/database/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  connection.py  migrations.py  mission_models.py  models.py  project_execution_models.py  test_connection.py
backend/docs/: CONFIGURATION_VALIDATION.md  LOGGING.md
backend/examples/: logging_demo.py
backend/knowledge_base/: .gitkeep  __init__.py  audio_processor.py  cancellation_registry.py  chunk_enricher.py  config_utils.py  document_chunker.py  document_processor_worker.py  document_upload.py  file_validator.py  knowledge_indexer.py  knowledge_search.py  ocr_processor.py  processing_queue.py  storage_cleanup.py  test_knowledge_base.py  text_extractors.py  text_normalizer.py  vector_collection.py  video_processor.py  vision_parser.py  zip_handler.py
backend/llm_providers/: .gitkeep  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  anthropic_provider.py  base.py  config_manager.py  custom_openai_provider.py  db_manager.py  health_check.py  model_metadata.py  models.py  ollama_provider.py  openai_compatible.py  openai_provider.py  prompts.py  protocol_clients.py  provider_resolver.py  router.py  test_llm_providers.py  test_provider_deletion.py  vllm_provider.py
backend/mcp_module/: __init__.py  http_client.py  mcp_client.py  mcp_registry.py  mcp_tool_sync.py  mcp_tool_wrapper.py
backend/memory_system/: .gitkeep  IMPLEMENTATION_SUMMARY.md  (+24 more)
(+1052 files in other folders)
