[tool.poetry]
name = "linx-platform"
version = "1.0.0"
description = "LinX (灵枢) - Intelligent Collaboration Platform"
authors = ["LinX Team"]
readme = "README.md"
license = "MIT OR Apache-2.0"
python = "^3.11"

[project]
name = "linx-platform"
version = "1.0.0"
description = "LinX (灵枢) - Intelligent Collaboration Platform"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = {text = "MIT OR Apache-2.0"}
authors = [{name = "LinX Team"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core Framework and API
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

# Agent Framework
langchain = "^0.1.4"
langchain-community = "^0.0.16"
langchain-core = "^0.1.16"

# Database - PostgreSQL
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"

# Database - Vector Database (Milvus)
pymilvus = ">=2.6.3,<2.7"

# Object Storage - MinIO
minio = "^7.2.3"

# Message Bus - Redis
redis = "^5.0.1"

# Authentication and Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
PyJWT = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.1.2"
cryptography = "^42.0.0"

# LLM Providers
ollama = "^0.1.6"
openai = "^1.10.0"
anthropic = "^0.8.1"

# Document Processing
PyPDF2 = "^3.0.1"
pdfplumber = "^0.10.3"
python-docx = "^1.1.0"
python-pptx = "^1.0.2"
pytesseract = "^0.3.10"
Pillow = "^10.2.0"
PyMuPDF = "^1.24.0"
openai-whisper = "^20231117"
moviepy = "^1.0.3"

# Data Processing
pandas = "^2.1.4"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
numpy = "^1.26.3"

# HTTP Client
httpx = "^0.26.0"
aiohttp = "^3.9.1"

# Configuration Management
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"

# Logging and Monitoring
structlog = "^24.1.0"
python-json-logger = "^2.0.7"
prometheus-client = "^0.19.0"

# Distributed Tracing
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
opentelemetry-exporter-jaeger = "^1.22.0"

# Task Queue
celery = "^5.3.6"
kombu = "^5.3.5"

# Utilities
python-dateutil = "^2.8.2"
pytz = "^2024.1"
croniter = "^6.0.0"
uuid = "^1.30"

# WebSocket Support
websockets = "^12.0"
lark-oapi = ">=1.5.3,<2"
python-socks = "^2.5.3"

# Rate Limiting
slowapi = "^0.1.9"

# Email Support
aiosmtplib = "^3.0.1"
email-validator = "^2.1.0"

# Markdown Processing
markdown = "^3.5.2"

# JSON Schema Validation
jsonschema = "^4.20.0"

# Retry Logic
tenacity = "^8.2.3"

# File Type Detection
python-magic = "^0.4.27"

# Malware Scanning
clamd = "^1.0.2"

# NLP
nltk = "^3.8.1"
spacy = "^3.7.2"

# Docker Integration
docker = "^7.0.0"

# Scientific Computing
scipy = "^1.11.4"
scikit-learn = "^1.4.0"

# Caching
cachetools = "^5.3.2"

# Async Support
anyio = "^4.2.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

# Code Quality
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"

# Development Tools
ipython = "^8.20.0"
ipdb = "^0.13.13"

[tool.poetry.scripts]
api = "api_gateway.main:main"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --import-mode=importlib --cov=. --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
